--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -4,28 +4,19 @@ box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
 .headertitle{ padding-top: 5px; padding-bottom: 5px; margin-bottom:2px;
-  background: #03a9f4;
-  background-image: -webkit-linear-gradient(top, #29b6f6, #0369a8);
-  background-image: -moz-linear-gradient(top, #29b6f6, #0369a8);
-  background-image: -ms-linear-gradient(top, #29b6f6, #0369a8);
-  background-image: -o-linear-gradient(top, #29b6f6, #0369a8);
-  background-image: linear-gradient(to bottom, #29b6f6, #0369a8);
+  background: #039be5;
+  background-image: -webkit-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -moz-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -ms-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -o-linear-gradient(top, #03a9f4, #039be5);
+  background-image: linear-gradient(to bottom, #03a9f4, #039be5);
   border-radius: 3px;
   color: #ffffff;
   font-size: 15px;
-  padding: 7px 20px 7px 20px;
+  padding: 7px 10px 7px 10px;
   text-decoration: none;
-
+  text-align: center;
 }
-
- .headertitle:hover{ background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-  }
 
 .maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
@@ -82,7 +73,7 @@ $('.expander').simpleexpand();
 
 <div class="maintitle">Departments &amp; Teachers</div>
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Computer Science and Telecommunication Engineering (CSTE 01)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Computer Science and Telecommunication Engineering (CSTE 01)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><span style="font-size:14px;"><strong>Chairman &amp; Associate Professor</strong></span></u></p>
@@ -151,7 +142,7 @@ Email: <a class="email" href="mailto:im_towhid@yahoo.com">im_towhid@yahoo.com</a
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander2" class="headertitle expander toggle">Fisheries and Marine Science (FIMS 02)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander2" class="headertitle expander">Fisheries and Marine Science (FIMS 02)</div></a>
 
 <div class="content">
 <div class="infoclass"><strong>DR. MD. ABUL HOSSAIN</strong><br />
@@ -239,7 +230,7 @@ website: <a href="www.fims-nstu.org">www.fims-nstu.org</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander3" class="headertitle expander toggle">Pharmacy (03)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander3" class="headertitle expander">Pharmacy (03)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Associate Professor</strong></u></p>
@@ -331,7 +322,7 @@ website: <a href="www.nstupharma.org">www.nstupharma.org</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander toggle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Associate Professor</strong></u></p>
@@ -410,7 +401,7 @@ Email: <a class="email" href="mailto:shahid_acct@yahoo.com">shahid_acct@yahoo.co
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander5" class="headertitle expander toggle">MicroBiology (MBG 05)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander5" class="headertitle expander">MicroBiology (MBG 05)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
@@ -459,7 +450,7 @@ Phone: <a class="telephone" href="tel:01726036487">01726036487</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander6" class="headertitle expander toggle">Applied Mathematics(AM 06)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander6" class="headertitle expander">Applied Mathematics(AM 06)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman</strong></u></p>
@@ -501,7 +492,7 @@ phone: <a class="telephone" href="tel:01840607032">01840607032</a> , <a class="t
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander toggle">English (07)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander">English (07)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant professor</strong></u></p>
@@ -535,7 +526,7 @@ Phone: <a class="telephone" href="tel:01813171087">01813171087</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander toggle">Food Technology and Nutrition Science(FTNS 08)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander">Food Technology and Nutrition Science(FTNS 08)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>&nbsp;Chairman &amp; Assistant Professor</strong></u></p>
@@ -555,7 +546,7 @@ Phone: <a class="telephone" href="tel:01687304530">01687304530</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander9" class="headertitle expander toggle">Environmental Science and Hazard Studies(ESHS 09)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander9" class="headertitle expander">Environmental Science and Hazard Studies(ESHS 09)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
@@ -581,7 +572,7 @@ Phone: <a class="telephone" href="tel:01717955310">01717955310</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander toggle">Business Administration(BBA 10)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander">Business Administration(BBA 10)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman &amp; Assistant Professor</strong></u></p>
@@ -606,7 +597,7 @@ Phone: <a class="telephone" href="tel:01673642243">01673642243</a></div>
 
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Information and Communication Technology(ICT 11)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Information and Communication Technology(ICT 11)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>&nbsp;Chairman &amp; Associate Professor</strong></u></p>
@@ -632,7 +623,7 @@ Email: <a class="email" href="mailto:iamsaif07@gmail.com">iamsaif07@gmail.com</a
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Biotechnology and Genetic Engineering(BGE 12)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Biotechnology and Genetic Engineering(BGE 12)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman (Acting) &amp; Lecturer</strong></u></p>
@@ -656,7 +647,7 @@ Phone: <a class="telephone" href="tel:01723336562">01723336562</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Economics and Poverty Studies(EPS 13)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Economics and Poverty Studies(EPS 13)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman (Acting) &amp; Lecturer</strong></u></p>
@@ -684,7 +675,7 @@ Phone: <a class="telephone" href="tel:01756524309">01756524309</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander toggle">Coastal Agriculture(CA 14)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Coastal Agriculture(CA 14)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman (Acting) &amp; Lecturer</strong></u></p>
