--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -3,9 +3,23 @@
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
-.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
-.telePhone {
+.headertitle{ padding-top: 5px; padding-bottom: 5px; margin-bottom:2px;
+  background: #039be5;
+  background-image: -webkit-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -moz-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -ms-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -o-linear-gradient(top, #03a9f4, #039be5);
+  background-image: linear-gradient(to bottom, #03a9f4, #039be5);
+  border-radius: 3px;
+  color: #ffffff;
+  font-size: 15px;
+  padding: 7px 10px 7px 10px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
+.telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
     background-repeat: no-repeat;
@@ -16,8 +30,8 @@ p{font-size:15px}
     text-decoration: none;
     padding-top: 2px;
 }
-.telePhone:hover{color:#29b6f6}
-.email {
+.telephone:hover{color:#29b6f6}
+.Email {
     background-image: url("http://i60.tinypic.com/dqm2cy.png");
     background-position: 3px 3px;
     background-repeat: no-repeat;
@@ -28,11 +42,40 @@ p{font-size:15px}
     padding-top: 2px;
     text-decoration: none;
 }
-.email:hover{color:#29b6f6}
+.Email:hover{color:#29b6f6}
+.content {display:none;}
+.toggle.expander.expanded {
+padding-left: 27px;
+background-position: 13px;
+background-repeat: no-repeat;
+background-image: url(https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/demo/expanded.gif);
+}
+.toggle.expander.collapsed {
+padding-left: 27px;
+background-position: 13px;
+background-repeat: no-repeat;
+background-image: url(https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/demo/collapsed.gif);
+}
+#demo-nesting-sub1 {
+margin-left: 20px;
+}
+#demo-nesting-sub2 {
+margin-left: 40px;
+}
 </style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/src/simple-expand.min.js"></script>
+<script type="text/javascript">
+$(function () {
+$('.expander').simpleexpand();
+});
+</script>
 <div class="maintitle">Class Representative</div>
 
-<div class="headertitle">Computer Science and Telecommunication Engineering (CSTE 01)</div>
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Computer Science and Telecommunication Engineering (CSTE 01)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><strong><u>5th Batch</u></strong></p>
 
@@ -68,8 +111,10 @@ Phone: <a class="telephone" href="tel:01672216547">01672216547</a></div>
 <div class="infoclass"><strong>Robiul Auwal</strong><br />
 Phone: <a class="telephone" href="tel:01827893381">01827893381</a></div>
 
-<div class="headertitle">Fisheries and Marine Science (FIMS 02)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Fisheries and Marine Science (FIMS 02)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>5th Batch</strong></u></p>
 
 <div class="infoclass"><strong>Jakir Hossain</strong><br />
@@ -103,8 +148,10 @@ Phone: <a class="telephone" href="tel:01829616858">01829616858</a></div>
 <strong>Nasrin</strong></div>
 </div>
 
-<div class="headertitle">Pharmacy (code 03)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Pharmacy (code 03)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>5th batch</strong></u></p>
 
 <div class="infoclass"><strong>Shalahuddin Millat</strong><br />
@@ -130,7 +177,10 @@ Phone: <a class="telephone" href="tel:01815718030">01815718030</a></div>
 <div class="infoclass"><strong>Pritom</strong><br />
 Phone: <a class="telephone" href="tel:01813690549">01813690549</a></div>
 
-<div class="headertitle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>5th Batch</strong></u></p>
 
@@ -157,7 +207,10 @@ Phone: <a class="telephone" href="tel:01815807458">01815807458</a></div>
 <div class="infoclass"><strong>Sohag</strong><br />
 Phone: <a class="telephone" href="tel:01684007742">01684007742</a></div>
 
-<div class="headertitle">Microbiology (MBG 05)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Microbiology (MBG 05)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>5th Batch</strong></u></p>
 
@@ -199,7 +252,10 @@ Phone: <a class="telephone" href="tel:01734452665">01734452665</a></div>
 <div class="infoclass">CR(Female)<br />
 <strong>Afnan Ashan</strong></div>
 
-<div class="headertitle">Applied Mathematics (05)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Applied Mathematics (05)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>6th Batch</strong></u></p>
 
@@ -224,7 +280,10 @@ Phone: <a class="telephone" href="tel:01965325752">01965325752</a></div>
 <div class="infoclass">Cr(Female)<br />
 <strong>Dolon Chapa</strong></div>
 
-<div class="headertitle">English (07)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">English (07)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>6th Batch</strong></u></p>
 
@@ -246,7 +305,10 @@ Phone: <a class="telephone" href="tel:01713613039">01713613039</a></div>
 <div class="infoclass"><strong>Shipon</strong><br />
 Phone: <a class="telephone" href="tel:01676455064">01676455064</a></div>
 
-<div class="headertitle">Food Technology and Nutrition Science(FTNS 08)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Food Technology and Nutrition Science(FTNS 08)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>7th Batch</strong></u></p>
 
@@ -272,7 +334,10 @@ Phone: <a class="telephone" href="tel:01671651155">01671651155</a></div>
 <div class="infoclass">CR(Female)<br />
 <strong>Israt Jahan Jeny</strong></div>
 
-<div class="headertitle">Environmental Science and Hazard Studies(ESHS 09)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Environmental Science and Hazard Studies(ESHS 09)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>7th batch</strong></u></p>
 
@@ -292,7 +357,10 @@ Jobaida Soma</div>
 <div class="infoclass"><strong>Tajbib</strong><br />
 Phone: <a class="telephone" href="tel:01781939371">01781939371</a></div>
 
-<div class="headertitle">Business Administration(BBA 10)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Business Administration(BBA 10)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><strong><u>7th Batch</u></strong></p>
 
@@ -318,7 +386,10 @@ Phone: <a class="telephone" href="tel:01834063347">01834063347</a></div>
 <div class="infoclass">CR(Female)<br />
 <strong>Bina</strong></div>
 
-<div class="headertitle">Information and Communication Technology(ICT 11)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Information and Communication Technology(ICT 11)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>8th batch</strong></u></p>
 
@@ -336,7 +407,10 @@ Phone: <a class="telephone" href="tel:01933056866">01933056866</a></div>
 <div class="infoclass">CR(Female)<br />
 <strong>Samiya chawdhuri Sarna</strong></div>
 
-<div class="headertitle">Biotechnology and Genetic Engineering(BGE 12)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Biotechnology and Genetic Engineering(BGE 12)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><strong><u>8th Batch</u></strong></p>
 
@@ -348,7 +422,10 @@ Phone: <a class="telephone" href="tel:01915332872">01915332872</a></div>
 <div class="infoclass"><strong>Anisur Rahman</strong><br />
 Phone: <a class="telephone" href="tel:01623092488">01623092488</a></div>
 
-<div class="headertitle">Economics and Poverty Studies(EPS 13)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Economics and Poverty Studies(EPS 13)</div></a>
+
+<div class="content">
 
 <p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
 
@@ -365,8 +442,10 @@ Fb Page: <a href="http://www.facebook.com/economicsbdmagazine">www.facebook.com/
 <div class="infoclass"><strong>Mehadi</strong><br />
 Phone: <a class="telephone" href="tel:01676439202">01676439202</a></div>
 
-<div class="headertitle">Coastal Agriculture (CA 13)</div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Coastal Agriculture (CA 14)</div></a>
 
+<div class="content">
 <p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
 
 <div class="infoclass"><strong>Md. Rakibul Islam Rico</strong><br />
@@ -379,3 +458,4 @@ Phone: <a class="telephone" href="tel:01723902157">01723902157</a></div>
 
 <div class="infoclass">CR(Female)<br />
 <strong>Epa</strong></div>
+</div></div>
